# biosequencemanipulation

./: .gitignore  README.md  bioreversecomplement.cabal  biosequencemanipulation.cabal  cabal.config  stack.yaml
src/Bio/Sequence/: Manipulation.hs  ReverseComplement.hs
test/: Spec.hs
