name:                bioreversecomplement
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/BioHaskell/bioreversecomplement
license:             BSD3
license-file:        LICENSE
author:              Chad R Laing
maintainer:          chadlaing@inoutbox.com
copyright:           2017 Chad R Laing
category:            Bioinformatics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bio.Sequence.ReverseComplement
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BioHaskell/bioreversecomplement
