name:                biosequencemanipulation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/BioHaskell/biosequencemanipulation
license:             GPL-3
license-file:        LICENSE
author:              Chad R Laing
maintainer:          chadlaing@inoutbox.com
copyright:           2017 Chad R Laing
category:            Bioinformatics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bio.Sequence.Manipulation
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1 && < 1.0
                     , biocore >= 0.3.1 && < 1.0
                     , protolude >= 0.1 && < 1.0
  default-language:    Haskell2010

test-suite biosequencemanipulation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       biosequencemanipulation
                      , base >= 4.7 && < 5
                      , bytestring >= 0.10.8.1 && < 1.0
                      , biocore >= 0.3.1 && < 1.0
                      , protolude >= 0.1 && < 1.0
                      , hspec >= 2.2.4 && < 3.0
                      , QuickCheck >= 2.8.2 && < 3.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BioHaskell/biosequencemanipulation
